--- a/CPSC471Project/src/assets/products1/assignment3templateProblems1-5.tex
+++ b/CPSC471Project/src/assets/products1/assignment3templateProblems1-5.tex
@@ -104,9 +104,70 @@ Thus, given a hash $x$, such that $H(M) = x$, suppose that $x$'s string starts w
 
 \begin{enumerate}
 
-\item % 2 (a)
+\item First, let's state definitions from both CBC-MAC and CFB-MAC.\\
+For CBC-MAC:
+\begin{align}
+C_0 = 0^n &\text{ (Initial State)}\\
+C_i = E_K(M_i \oplus C_{i-1}) &\text{ (For } 1 \le i \le L \text{)}\\
+\text{CBC-MAC}(M) = C_L &\text{ (Final State)}
+\end{align}
+For CFB-MAC:
+\begin{align}
+C_0'= M_1 &\text{ (Initial State)}\\
+C_i'= M_{i+1} \oplus E_K(C_{i-1}') &\text{ (For } 1 \le i \le L - 1 \text{)}\\
+\text{CFB-MAC}(M) = E_K(C_{L-1}') &\text{ (Final State) }
+\end{align}
 
-\item % 2 (b)
+Let's use induction on $i$ to prove that $C_i = C_i' \oplus M_{i+1}$ for $0 \le i \le L - 1$.\\
+
+\textbf{Base Case - i = 0:}
+\begin{align*}
+C_0 &= C_0' \oplus M_{0+1}  &\textbf{By our assumption}\\
+C_0 &= M_1 \oplus M_1  &\textbf{By definition of CFB-MAC (5)}\\
+C_0 &= 0^n &\textbf{XOR laws: } \mathbf{A \oplus A = 0^n : (n = |A|)}
+\end{align*}
+Since $C_0 = 0^n$, by definition in (1), $C_i = C_i' \oplus M_{i+1}$  is true for the base case.\\
+
+\textbf{Inductive Hypothesis: }Suppose that $C_k = C_k' \oplus M_{k+1}$ holds true for some $k$, where $0 \le k \le L - 1$.
+
+\textbf{Inductive Step: }Thus, it is sufficient to show that $C_{k+1} = C_{k+1}' \oplus M_{k+2}$ holds true for $k+1$, where $0 \le k \le k + 1 \le L - 1$.\\\\
+Note: k is different from K (K is the key and not really apart of the proof)\\
+
+\textbf{Proof by induction: }
+\begin{align*}
+C_{k+1} &= E_K(M_{k+1} \oplus C_k) &\textbf{By definition for CBC-MAC (2)}\\
+C_{k+1} &= E_K(M_{k+1} \oplus C_k' \oplus M_{k+1}) &\textbf{By our inductive hypothesis}\\
+C_{k+1} &= E_K(M_{k+1} \oplus M_{k+1} \oplus C_k') &\textbf{Property of XOR: Commutative}\\
+C_{k+1} &= E_K(C_k') &\textbf{XOR rule: A } \mathbf{\oplus} \textbf{ A = 0}
+\end{align*}
+Now,
+\begin{align*}
+C_{k+1}' &= M_{k+2} \oplus E_K(C_{k}') &\textbf{By definition for CFB-MAC (5)}\\
+C_{k+1}' &= M_{k+2} \oplus C_{k+1} &\textbf{From previous step } \mathbf{C_{k+1} = E_K(C_k')}\\
+C_{k+1} &= C_{k+1}' \oplus M_{k+2} &\textbf{XOR property: }\mathbf{A = B \oplus C \rightarrow C = A \oplus B}
+\end{align*}
+We have shown that if this statement holds for $k$, then this statement also holds for $k+1$, proving our inductive hypothesis.\\
+
+Thus, using induction on i, we have proven that $C_i = C_i' \oplus M_{i+1}$ for $0 \le i \le L -1$. $\blacksquare$\\
+
+\item Let M be any message, and K be a given key. \\
+We want to show that CBC-MAC(M) = CFB-MAC(M).\\
+
+\textbf{Direct proof: }\\
+For $i = L - 1$ (the second last block), we have:
+\begin{align*}
+C_{L-1} &= C_{L-1}' \oplus M_{L} &\textbf{By our inductive proof in part (a)}
+\end{align*}
+For $i = L$ (The last block), we have:
+\begin{align*}
+\text{CBC-MAC} (M) &= C_L &\textbf{By definition of CBC-MAC (3)}\\
+&= E_K(M_L \oplus C_{L-1}) &\textbf{By definition of CBC-MAC (2)}\\
+&= E_K(M_L \oplus C_{L-1}' \oplus M_L) &\textbf{From our previous step on } \mathbf{C_{L-1}}\\
+&= E_K(M_L \oplus M_L \oplus  C_{L-1}') &\textbf{Property of XOR: Commutative}\\
+&= E_K(C_{L-1}') &\textbf{XOR rule: A } \mathbf{\oplus} \textbf{ A = 0}\\
+\text{CBC-MAC}(M) &= \text{CFB-MAC}(M) &\textbf{By definition of CFB-MAC (6)}
+\end{align*}
+Thus, we have proven that CBC-MAC$(M)$ = CFB-MAC$(M)$. $\blacksquare$
 
 \end{enumerate}
 
@@ -128,7 +189,7 @@ From the ITHASH function, we know that this is an iterated hash function that wo
 
 We are given a message/PHMAC pair ($M_1$, PHMAC$_K(M_1)$). We can see from the ITHASH function, when the input is $M_1$, such that PHMAC$_K(M_1)$, the returned PHMAC$_K(M_1)$ is the final state when $i = L$.\\
 
-We are given PHMAC$_K(M_1)$ already, which would have already have had the key $K$ appended at the start of the ITHASH algorithm. Since we don't have the key, we can just start the algorithm ITHASH again but starting from the final state of PHMAC$_K(M_1)$, and then just continue processing from the block $X$ (Which makes sense because $M_2 = M_1||X$).
+We are given PHMAC$_K(M_1)$ already, which would have already have had the key $K$ appended at the start of the ITHASH algorithm. Since we don't have the key, we can just start the algorithm ITHASH again but starting from the final state of PHMAC$_K(M_1)$, and then just continue processing from the block $X$ (Which makes sense because $M_2 = M_1||X$).\\
 
 
 \item % 3 (b)
